<resources>
    <string name="app_name">ReadingTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_now">Сейчас читаю</string>
    <string name="reading_plan">Планирую прочитать</string>
    <string name="daily_goal">Ежедневная цель (мин)</string>
    <string name="edit">Редактировать</string>
    <string name="is_left">осталось</string>
    <string name="notifications_turn_on">Уведомления включены</string>
    <string name="notifications_turn_off">Уведомления выключены</string>
    <string name="set">Установить</string>
    <string name="pages_from_pages">%d/%d</string>
    <string name="continue_reading">Продолжить</string>
    <string name="book_cover">book_cover</string>
    <string name="start_reading">Начать</string>
    <string name="add">Добавить</string>
    <string name="main">Главная</string>
    <string name="library"><![CDATA[<Библиотека>]]></string>
    <string name="statistics">Статистика</string>
</resources>