<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:padding="16dp"
    android:scrollbars="none"
    tools:context=".presentation.fragments.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/home_notification_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_notification_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_now" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler_view_read_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <TextView
                    android:id="@+id/home_current_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/add"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/baseline_add_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/home_title_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_goal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/home_edit_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/baseline_edit_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.triggertrap.seekarc.SeekArc
                    android:id="@+id/home_seek_minutes"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:padding="16dp"
                    app:arcWidth="10dp"
                    app:clockwise="true"
                    app:enabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_title_goal"
                    app:progressColor="@color/design_default_color_primary"
                    app:progressWidth="10dp"
                    app:rotation="180"
                    app:roundEdges="true"
                    app:startAngle="30"
                    app:sweepAngle="300"
                    app:touchInside="false" />

                <TextView
                    android:id="@+id/home_goal_rest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/home_seek_minutes"
                    app:layout_constraintEnd_toEndOf="@id/home_seek_minutes"
                    app:layout_constraintStart_toStartOf="@id/home_seek_minutes"
                    app:layout_constraintTop_toTopOf="@id/home_seek_minutes" />

                <TextView
                    android:id="@+id/home_goal_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_left"
                    app:layout_constraintEnd_toEndOf="@id/home_seek_minutes"
                    app:layout_constraintStart_toStartOf="@id/home_seek_minutes"
                    app:layout_constraintTop_toBottomOf="@id/home_goal_rest" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reading_plan" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler_view_reading_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <TextView
                    android:id="@+id/home_planned_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/add"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/baseline_add_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>